# zui.rs

./: Cargo.toml  README.md
src/: app.rs  app_legacy.rs  cli.rs  errors.rs  main.rs  node_data.rs  tab.rs  ui.rs  zk.rs
src/app/: connection.rs  mod.rs  navigation.rs  render.rs  state.rs  zk_ops.rs
src/ui/: blocks.rs  layout.rs  mod.rs  rects.rs  tab_screen.rs  ui_handle.rs  ui_legacy.rs
